fix: Fixed Builds for Windows/Mac/Linux, hadn't notice till I did more testing but JavaFX was not being bundled properly causing the app to silent fail on any OS without JavaFX SDK installed. Fixed this and creating new builds.